--- a/_posts/2013-12-24-中文測試.md
+++ b/_posts/2013-12-24-中文測試.md
@@ -1,10 +1,10 @@
 ---
 title: 中文測試
 date: 2013-12-24 23:31:30
-categories:
-- myTest
+layout: post
+categories: myTest
 tags:
--myTest
+    -myTest
 ---
 
 #This is a Chinese test post.
